--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "auth0": "^2.33.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
